sample-app/cicd/triggers/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-event-listener-b2l351
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: el-event-listener
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
